src/objects/Obligacion__c.object
<CustomObject>
    <fields>
        <fullName>Cifin__c</fullName>
        <label>Cifin</label>
        <referenceTo>Cifin__c</referenceTo>
        <relationshipLabel>Obligaciones</relationshipLabel>
        <relationshipName>Obligaciones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sector_Financiero_2__c</fullName>
        <label>Sector Financiero 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_Financiero__c</fullName>
        <label>Sector Financiero</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_Real_2__c</fullName>
        <label>Sector Real 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_Real__c</fullName>
        <label>Sector Real</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtitulo__c</fullName>
        <label>Subtitulo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtotal_2__c</fullName>
        <label>Subtotal 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tarjeta_de_Credito_2__c</fullName>
        <label>Tarjeta de Credito 2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tarjeta_de_Credito__c</fullName>
        <label>Tarjeta de Credito</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Titulo__c</fullName>
        <label>Titulo</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Obligacion</label>
    <nameField>
        <displayFormat>OC-{000000}</displayFormat>
        <label>Id Obligacion</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Obligaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>